Displayed only on Mobile

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,8 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
+    <div class="discounts">
+      <img src="https://lh3.googleusercontent.com/proxy/APZvlqrz1CHJu5rUIT3CvFWR9phyHXwDL-yI0Nch7B205tU7su-2-8Ru6NrTzu1BuhZABVIJ2jtKBx7q6DUExSRDeOvAo3b9R_UR1DQpCmbKx8_7SKMtDyCBrhjDIdY">
+    </div>
   </body>
 </html>
