--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,18 @@
     </div>
     <div class="discounts">
       <img src="https://lh3.googleusercontent.com/proxy/APZvlqrz1CHJu5rUIT3CvFWR9phyHXwDL-yI0Nch7B205tU7su-2-8Ru6NrTzu1BuhZABVIJ2jtKBx7q6DUExSRDeOvAo3b9R_UR1DQpCmbKx8_7SKMtDyCBrhjDIdY">
+      <p> Beware of the paragraph</p>
     </div>
   </body>
+  <style>
+    .discounts{
+  display:all;
+  background-color: blue;
+}
+@media only screen and (min-width: 600px) {
+  .discounts {
+    display:none;
+  }
+}
+  </style>
 </html>
